Fix issue where the border for the edit cell box was getting cut off.

--- a/js/src/qgrid.css
+++ b/js/src/qgrid.css
@@ -383,6 +383,10 @@
   z-index: 90;
 }
 
+.q-grid .slick-cell.editable {
+  z-index: 91 !important;
+}
+
 .q-grid .slick-cell.selected {
   background-color: transparent;
 }
